
for top_builddir in . .. ../.. $ac_auxdir $ac_auxdir/..; do
	test -f $top_builddir/configure && break
done

AC_INIT(libipod,0.1)

LIBIPOD_NAME=libipod
ifdef([AC_DIVERSION_NOTICE],[AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)],[AC_DIVERT_PUSH(NOTICE)])

LIBIPOD_MAJOR_VERSION=1
LIBIPOD_MINOR_VERSION=0
LIBIPOD_PATCH_VERSION=0
LIBIPOD_ADDED_VERSION=
LIBIPOD_VERSION=$LIBIPOD_MAJOR_VERSION.$LIBIPOD_MINOR_VERSION.$LIBIPOD_PATCH_VERSION$LIBIPOD_ADDED_VERSION

LIBIPOD_INTERFACE_AGE=0
LIBIPOD_BINARY_AGE=0

AC_DIVERT_POP()

AC_SUBST(LIBIPOD_NAME)
AC_SUBST(LIBIPOD_MAJOR_VERSION)
AC_SUBST(LIBIPOD_MINOR_VERSION)
AC_SUBST(LIBIPOD_PATCH_VERSION)
AC_SUBST(LIBIPOD_VERSION)
AC_SUBST(LIBIPOD_INTERFACE_AGE)
AC_SUBST(LIBIPOD_BINARY_AGE)

LT_RELEASE=$LIBIPOD_MAJOR_VERSION.$LIBIPOD_MINOR_VERSION
LT_CURRENT=`expr $LIBIPOD_PATCH_VERSION - $LIBIPOD_INTERFACE_AGE`
LT_REVISION=$LIBIPOD_INTERFACE_AGE
LT_AGE=`expr $LIBIPOD_BINARY_AGE - $LIBIPOD_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBIPOD_VERSION
PACKAGE=$LIBIPOD_NAME

LIBIPOD_FULLNAME=$LIBIPOD_NAME-$LIBIPOD_VERION
AC_SUBST(LIBIPOD_FULLNAME)

AC_DEFINE_UNQUOTED(_LIBIPOD_NAME		"$LIBIPOD_NAME")
AC_DEFINE_UNQUOTED(_LIBIPOD_VERSION		"$LIBIPOD_VERSION")
AC_DEFINE_UNQUOTED(_LIBIPOD_FULLNAME		"$LIBIPOD_FULLNAME")
AC_DEFINE_UNQUOTED(_LIBIPOD_MAJOR_VERSION	$LIBIPOD_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(_LIBIPOD_MINOR_VERSION	$LIBIPOD_MINOR_VERSION)
AC_DEFINE_UNQUOTED(_LIBIPOD_PATCH_VERSION	$LIBIPOD_PATCH_VERSION)
AC_DEFINE_UNQUOTED(_LIBIPOD_INTERFACE_AGE	$LIBIPOD_INTERFACE_AGE)
AC_DEFINE_UNQUOTED(_LIBIPOD_BINARY_AGE		$LIBIPOD_BINARY_AGE)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_MAINTAINER_MODE

AC_CANONICAL_HOST
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_C_BIGENDIAN

dnl AC_CHECK_LIB(expat,AC_DEFINE_UNQUOTED(HAVE_EXPAT))#,,
dnl #  AC_MSG_ERROR([libipod requires expat to process property lists]))

AC_ARG_ENABLE(plist,
  [  --enable-plist         Enable inclusion of Property List support],
  [use_plist=$enableval], [use_plist=no])

if test "x$use_plist" = "xyes"; then
  AC_CHECK_HEADER(expat.h, [use_plist=yes], [use_plist=no])
fi

AM_CONDITIONAL(PLIST, test "x$use_plist" = "xyes")
if test "x$use_plist" = "xyes"; then
  PLIST_FEATURE="#define PLIST 1"
  PLIST_LIBS="-lexpat"
fi
AC_SUBST(PLIST_FEATURE)
LIBS="$LIBS $PLIST_LIBS"

AC_HEADER_STDC
AC_CHECK_HEADERS(sys/stat.h)

AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_LANG_RESTORE

dnl AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AC_CONFIG_FILES([
	Makefile
	include/Makefile
	include/ipod/Makefile
	src/Makefile
	examples/Makefile
	])
AC_OUTPUT

echo ""
echo "libipod will be built with the following features:"
echo "  Property Lists: $use_plist"
echo ""
