#lib_LIBRARIES = libipod.a
#libipod_a_SOURCES = 

INCLUDES = -I$(top_srcdir)/include
lib_LTLIBRARIES = libipod.la
libipod_la_SOURCES = \
	plist.c \
	ipod_error.c \
	ipod_io.c \
	ipod_io_memory.c \
	ipod_io_file.c \
	ipod_memory.c \
	ipod_string.c \
	ipod_file_utils.c \
	ipod_atom.c \
	ipod_atom_list.c \
	ipod_atom_mhbd.c \
	ipod_atom_mhsd.c \
	ipod_atom_mhlt.c \
	ipod_atom_mhit.c \
	ipod_atom_mhod.c \
	ipod_atom_mhlp.c \
	ipod_atom_mhyp.c \
	ipod_atom_mhip.c \
	ipod_atom_mqed.c \
	ipod_atom_pqed.c \
	ipod_track_add.c \
	ipod_track_from_m4a.c \
	ipod_track_from_mp3.c \
	ipod.c \
	ipod_cpp.cpp
