AC_INIT(src/df_andi.c)

AC_PREREQ(2.52)

PACKAGE=DirectFB-examples
VERSION=1.0.1

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AC_SUBST(VERSION)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC


dnl Clear default CFLAGS
if test x"$CFLAGS" = x"-g -O2"; then
  CFLAGS=
fi
  
CFLAGS="-O3 -pipe $CFLAGS"

if test "x$GCC" = xyes; then
  CFLAGS="-Wall $CFLAGS"
fi

AC_CHECK_HEADERS(stdbool.h)

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  CFLAGS="$CFLAGS -g3"
fi)


PKG_CHECK_MODULES(DIRECTFB, directfb >= $VERSION, ,
	AC_MSG_ERROR([$DIRECTFB_PKG_ERRORS
*** DirectFB $VERSION or newer is required. The latest version
*** of DirectFB is available from http://www.directfb.org/.]))

CFLAGS="$CFLAGS -Werror-implicit-function-declaration"

DATADIR=$datadir/directfb-examples
AC_SUBST(DATADIR)

AC_OUTPUT([
Makefile
data/Makefile
data/df_neo/Makefile
data/spacedream/Makefile
src/Makefile
src/df_knuckles/Makefile
src/df_neo/Makefile
src/spacedream/Makefile
])
